--- a/package.json
+++ b/package.json
@@ -2,5 +2,9 @@
   "name": "awacs",
   "version": "0.0.0",
   "author": "eSKY.pl",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "express": "^3.5.1",
+    "mongoose": "^3.8.8"
+  }
 }
